@@ -662,9 +662,9 @@ int main(int argc, const char ** argv)
 		argerror(_("no packages given for erase"));
 ia->transFlags |= RPMTRANS_FLAG_NOFDIGESTS;
 ia->probFilter |= RPMPROB_FILTER_OLDPACKAGE;
-ia->rbCheck = rpmrbCheck;
-ia->rbOrder = rpmrbOrder;
-ia->rbRun = rpmrbRun;
+ia->rbCheck = rpmcliInstallCheck;
+ia->rbOrder = rpmcliInstallOrder;
+ia->rbRun = rpmcliInstallRun;
 	    ec += rpmRollback(ts, ia, NULL);
 	} else {
 	    ec += rpmErase(ts, ia, (const char **) poptGetArgs(optCon));
@@ -706,9 +706,9 @@ ia->rbRun = rpmrbRun;
 		argerror(_("no packages given for install"));
 ia->transFlags |= RPMTRANS_FLAG_NOFDIGESTS;
 ia->probFilter |= RPMPROB_FILTER_OLDPACKAGE;
-ia->rbCheck = rpmrbCheck;
-ia->rbOrder = rpmrbOrder;
-ia->rbRun = rpmrbRun;
+ia->rbCheck = rpmcliInstallCheck;
+ia->rbOrder = rpmcliInstallOrder;
+ia->rbRun = rpmcliInstallRun;
 /*@i@*/	    ec += rpmRollback(ts, ia, NULL);
 	} else {
 	    /*@-compdef -compmempass@*/ /* FIX: ia->relocations[0].newPath undefined */
